--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
     font-family: poppins;
     justify-content: center;
     align-items: center;
-    height: 600px;
+    height: 400px;
 }
 
 .hd {
@@ -55,6 +55,7 @@ form {
     flex-direction: column;
     align-items: center;
     overflow: hidden;
+    margin-top: 18%;
 }
 
 hr {
